--- a/src/stylus/pages/index.styl
+++ b/src/stylus/pages/index.styl
@@ -15,6 +15,7 @@
       text-align: center
       display: block
       text-shadow: 2px 2px black
+      z-index: -2
 
       @media (max-width: 1200px)
         font-size: 600px
